--- a/pages/SA/SA020101.html
+++ b/pages/SA/SA020101.html
@@ -37,7 +37,7 @@
                                 data-navigational=true,
                                 data-items='[
                             { type:"rootitem", href: "", text: "계약", showText: true },
-                            { type:"item", href: "", text: "겨약문의관리", showText: true}
+                            { type:"item", href: "", text: "계약문의관리", showText: true}
                          ]'/>
                         </div>
                     </div>
