--- a/pages/SA/SA020501.html
+++ b/pages/SA/SA020501.html
@@ -96,7 +96,7 @@
                                     { "field": ""  }
                                     ]' 
                                     data-bind="source: gridSource"
-                                    data-toolbar="#=toolbarTemplate()#" style="height: 760px;">
+                                    data-toolbar="#=toolbarTemplate()#" style="height: 100%;">
                                 </div>
                                 <div class="table-bottom">
                                     <button data-role="button" class="gray-border">삭제</button>
