--- a/pages/SA/SA050101.html
+++ b/pages/SA/SA050101.html
@@ -21,7 +21,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">배분산정</h2>
+                            <h2 class="main-title">정산산정</h2>
                             <span class="h-ico lg tip ml-8"
                                 title="툴팁 메세지 입니다."
                                 data-role="tooltip"
@@ -84,7 +84,7 @@
                                     <div class="form-group">
                                         <div class="form-set">
                                             <button role="button" class="k-button"><span>수정</span></button>
-                                            <button role="button" class="k-button"><span>추가</span></button>
+                                            <button role="button" class="k-button"><span>등록</span></button>
                                         </div>
                                     </div>
                                 </div>
