--- a/pages/SA/SA070204.html
+++ b/pages/SA/SA070204.html
@@ -26,7 +26,7 @@
              data-modal="false"
              data-bind="dialogOpen: isVisible,
                             events: { close: onClose}"
-            class="lg">
+            class="md">
             <div class="content-group">
                 <!-- 업무정보 -->
                 <div class="table-set">
