--- a/pages/SA/SA070502.html
+++ b/pages/SA/SA070502.html
@@ -110,7 +110,7 @@
                                     <div class="table-content grid" id="viewModel_number">
                                         <div data-role="grid" 
                                             data-sortable="true" 
-                                            data-editable="true" 
+                                            data-editable="false" 
                                             data-columns='[
                                             { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
                                             { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
@@ -238,7 +238,7 @@
                                     <div class="table-content grid" id="viewModel_number2">
                                         <div data-role="grid" 
                                             data-sortable="true" 
-                                            data-editable="true" 
+                                            data-editable="false" 
                                             data-scrollable="{ virtual: true }"
                                             data-columns='[
                                             { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false, "template": "#=SetColor(NO)#"  },
@@ -365,7 +365,7 @@
                             <div class="table-content grid" id="viewModel_number3">
                                 <div data-role="grid" 
                                     data-sortable="true" 
-                                    data-editable="true" 
+                                    data-editable="false" 
                                     data-columns='[
                                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate3()#" },
                                     { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
