--- a/pages/SA/SA070602_01.html
+++ b/pages/SA/SA070602_01.html
@@ -181,7 +181,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button data-function="close" data-role="button" class="close hidden" data-icon="close"><span>닫기</span></button>
+                                        <button data-function="close" data-role="button" class="close hidden" data-icon="btn_X"><span>닫기</span></button>
                                     </div>
                                     <div id="addBulkRecipientPop" class="add-recipient-pop">
                                         <div class="upload-box form-set">
