--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -4,23 +4,27 @@
             <p class="title">Dropdown</p>
         </div>
         <div class="g-example-body flex-block">
-            <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+            <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="sm">
                 <option value="1">온라인</option>
                 <option value="2">오프라인</option>
             </select>
-            <select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
+            <select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="sm" disabled>
                 <option value="1">온라인</option>
                 <option value="2">오프라인</option>
+            </select>
+            <select data-role="dropdownlist" data-value="내용이 길경우 에는 자동 너비 조절" data-option-label="내용이 길경우 에는 자동 너비 조절" class="md">
+                <option value="1">내용이 길경우 에는 자동 너비 조절</option>
+                <option value="2">내용이 길경우 에는 자동 너비 조절</option>
             </select>
         </div>
 
         <div class="g-example-foot">
             <pre><code class="html">
-&lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+&lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="sm">
 &lt;option value="1">온라인&lt;/option>
 &lt;option value="2">오프라인&lt;/option>
 &lt;/select>
-&lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택" disabled>
+&lt;select data-role="dropdownlist" data-value="선택" data-option-label="선택" class="sm" disabled>
 &lt;option value="1">온라인&lt;/option>
 &lt;option value="2">오프라인&lt;/option>
 &lt;/select>
