--- a/pages/SA/SA010201_01.html
+++ b/pages/SA/SA010201_01.html
@@ -47,7 +47,7 @@
                 <div class="contents-body">
 
                     <div class="table-group">
-                        <div data-role="tabstrip" class="tab-control"
+                        <div data-role="tabstrip" class="tab-control border"
                             data-bind="events: { select: onSelect },
                             visible: isVisible">
                             <ul>
@@ -83,23 +83,24 @@
                                         </div>
                                     </script>
 
-                                    <div class="table-content grid">
+                                    <div class="table-content grid" id="viewModel_tab1">
                                         <div data-role="grid" 
                                             data-sortable="true" 
                                             data-editable="true" 
                                             data-columns='[
-                                            { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                                            { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
-                                            { "field": "상품코드", "width": 90 },
-                                            { "field": "상품명", "width": 170 },
-                                            { "field": "어플리케이션", "width": 146 },
-                                            { "field": "표준가격", "width": 140 },
-                                            { "field": "최소가격", "width": 146 },
-                                            { "field": "승인상태", "width": 140 },
-                                            { "field": "사용가능업종", "width": 140 },
-                                            { "field": "등록일", "width": 120 },
-                                            { "field": "종료일", "width": 120 },
-                                            { "field": "비고", "width": 120 }
+                                            { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 40, "template": "#=checkboxTemplate()#" },
+                                            { "title": "NO.", "field": "NO", "width": 40, "attributes" : {"class": "text-center"}, "sortable": false, "filterable": false  },
+                                            { "field": "원가코드", "width": 140 },
+                                            { "field": "원가구분명", "width": 120 },
+                                            { "field": "거래처명", "width": 140 },
+                                            { "field": "시작일", "width": 110 },
+                                            { "field": "종료일", "width": 110 },
+                                            { "field": "수수료지급유형", "width": 140 },
+                                            { "field": "결제구분", "width": 140 },
+                                            { "title": "의뢰원가(원)", "field": "의뢰원가", "width": 120 },
+                                            { "title": "성공원가", "field": "성공원가", "width": 120 },
+                                            { "field": "펌아이디", "width": 140 },
+                                            { "field": "비고" }
                                             ]' 
                                             data-bound="trAddClass"
                                             data-bind="source: gridSource"
@@ -141,7 +142,7 @@
                                         </div>
                                     </script>
 
-                                    <div class="table-content grid">
+                                    <div class="table-content grid" id="viewModel_tab2">
                                         <div data-role="grid" 
                                             data-sortable="true" 
                                             data-editable="true" 
@@ -191,7 +192,7 @@
                                             <label for="checkbox-nolabel"></label> 
                                         </div>
                                     </script>
-                                    <div class="table-content grid">
+                                    <div class="table-content grid" id="viewModel_tab3">
                                         <div data-role="grid" 
                                             data-sortable="true" 
                                             data-editable="true" 
@@ -250,17 +251,40 @@
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
     <script>
-        var viewModel = kendo.observable({
+        var viewModel_tab1 = kendo.observable({
             gridSource: [
-                {  "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"40,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31", "비고": "" },
-                {  "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"20,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31", "비고": "반려" },
-                {  "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31", "비고": "대기" }
+                {  "NO":"1",  "원가코드":"B-A-004-001", "원가구분명":"공통", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"완전출금", "의뢰원가":"30", "성공원가":"200", "펌아이디":"", "비고": "" },
+                {  "NO":"2",  "원가코드":"B-A-004-001", "원가구분명":"공통", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"실시간", "의뢰원가":"100", "성공원가":"200", "펌아이디":"", "비고": "반려" },
+                {  "NO":"3",  "원가코드":"B-A-004-001", "원가구분명":"국민특판", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"계좌조회", "의뢰원가":"30", "성공원가":"300", "펌아이디":"", "비고": "대기" }
             ],
             displayGridSource: function() {
                 return stringify(this.get("gridSource").toJSON());
             },
         });
-        kendo.bind($(".wrap"), viewModel);
+        var viewModel_tab2 = kendo.observable({
+            gridSource: [
+                {  "NO":"1",  "원가코드":"B-A-004-001", "원가구분명":"공통", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"완전출금", "의뢰원가":"30", "성공원가":"200", "펌아이디":"", "비고": "" },
+                {  "NO":"2",  "원가코드":"B-A-004-001", "원가구분명":"공통", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"실시간", "의뢰원가":"100", "성공원가":"200", "펌아이디":"", "비고": "반려" },
+                {  "NO":"3",  "원가코드":"B-A-004-001", "원가구분명":"국민특판", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"계좌조회", "의뢰원가":"30", "성공원가":"300", "펌아이디":"", "비고": "대기" }
+            ],
+            displayGridSource: function() {
+                return stringify(this.get("gridSource").toJSON());
+            },
+        });
+        var viewModel_tab3 = kendo.observable({
+            gridSource: [
+                {  "NO":"1",  "원가코드":"B-A-004-001", "원가구분명":"공통", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"완전출금", "의뢰원가":"30", "성공원가":"200", "펌아이디":"", "비고": "" },
+                {  "NO":"2",  "원가코드":"B-A-004-001", "원가구분명":"공통", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"실시간", "의뢰원가":"100", "성공원가":"200", "펌아이디":"", "비고": "반려" },
+                {  "NO":"3",  "원가코드":"B-A-004-001", "원가구분명":"국민특판", "거래처명":"국민", "시작일":"2020/11/15", "종료일":"2021/12/31", "수수료지급유형":"선취", "결제구분":"계좌조회", "의뢰원가":"30", "성공원가":"300", "펌아이디":"", "비고": "대기" }
+            ],
+            displayGridSource: function() {
+                return stringify(this.get("gridSource").toJSON());
+            },
+        });
+        kendo.bind($(".wrap"), {});
+        kendo.bind($("#viewModel_tab1"), viewModel_tab1);
+        kendo.bind($("#viewModel_tab2"), viewModel_tab2);
+        kendo.bind($("#viewModel_tab3"), viewModel_tab3);
         function trAddClass(e) {
             var dataItems = e.sender.dataSource.view();
             for (var j = 0; j < dataItems.length; j++) {
