--- a/pages/SA/SA010201_03.html
+++ b/pages/SA/SA010201_03.html
@@ -47,7 +47,7 @@
                 <div class="contents-body">
 
                     <div class="table-group">
-                        <div data-role="tabstrip" class="tab-control"
+                        <div data-role="tabstrip" class="tab-control border"
                             data-bind="events: { select: onSelect },
                             visible: isVisible">
                             <ul>
