--- a/pages/SA/SA020201_01.html
+++ b/pages/SA/SA020201_01.html
@@ -49,10 +49,13 @@
                 </div>
                 <div class="table-set">
                     <script type="text/x-kendo-template" id="toolbarTemplate_count">
-                        <div class="title-box sm mt-0">
+                        <div class="title-box sm">
                             <span class="amount-set">
                                 <span class="amount current">1</span><span class="unit">건</span>
                             </span>
+                            <div class="form-set">
+                                <button data-role="button" class="k-button light-blue">기존현황삭제</button>
+                            </div>
                         </div>
                     </script>
                     <div class="table-content grid" id="viewModel_number">
@@ -69,9 +72,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-box bottom">
+                <!-- <div class="btn-box bottom">
                     <button data-role="button" class="gray-border">기존현황삭제</button>
-                </div>
+                </div> -->
             </div>
         </div>
 
