--- a/pages/SA/SA070703.html
+++ b/pages/SA/SA070703.html
@@ -44,8 +44,13 @@
                                                 <option value="2">오프라인</option>
                                             </select>
                                             <input type="text" class="h-input" placeholder="" />
-                                            <!-- [D] 체크 됐을 때 .is-checked 추가 -->
-                                            <button type="button" data-role="button" data-icon="input-check" class="text input-check is-important"><span>제목강조</span></button>
+                                            <button 
+                                                data-role="button" 
+                                                data-icon="input-check" 
+                                                id="viewModel_button"
+                                                class="text input-check is-important"
+                                                data-bind="visible: isVisible, events: { click: onClick }"
+                                            ><span>제목강조</span></button>
                                         </div>
                                     </td>
                                 </tr>
@@ -212,6 +217,8 @@
             }
         });
 
+
+
         var viewModel = kendo.observable({
             isVisible: true,
             isClosable: true,
@@ -227,6 +234,17 @@
 
         });
         kendo.bind($(".wrap"), viewModel);
+
+
+        var viewModel_button = kendo.observable({
+            isVisible: true,
+            onClick: function () {
+                $("#viewModel_button").toggleClass("k-state-active-custom");
+            }
+            
+        });
+        kendo.bind($("#viewModel_button"), viewModel_button);
+
 
         var viewModel_fileUpload = kendo.observable({
             isEnabled: true,
