--- a/pages/SA/SA070801.html
+++ b/pages/SA/SA070801.html
@@ -47,33 +47,36 @@
                 <div class="contents-body">
                     <div class="table-group">
 
-                        <div data-role="buttongroup" class="square square-8 md"
-                        data-index="0">
-                            <button data-role="button"><span>ARS 녹취대행 이용현황</span></button>
-                            <button data-role="button"><span>Mobile ASP 사용현황</span></button>
-                            <button data-role="button"><span>SMS / LMS 발송내역</span></button>
-                            <button data-role="button"><span>가상계좌 발급이력</span></button>
-                            <button data-role="button"><span>결제번호 인증내역</span></button>
-                            <button data-role="button"><span>고객 매출분석</span></button>
-                            <button data-role="button"><span>국민은행 별단 지급수수료</span></button>
-                            <button data-role="button"><span>단체고객 현황</span></button>
+                        <div id="viewModel_buttonGroup"
+                        class="square square-8 md"
+                        data-role="buttongroup" 
+                        data-bind="events: { select: onSelect }"
+                        data-index="1">
+                            <button><span>ARS 녹취대행 이용현황</span></button>
+                            <button><span>Mobile ASP 사용현황</span></button>
+                            <button><span>SMS / LMS 발송내역</span></button>
+                            <button><span>가상계좌 발급이력</span></button>
+                            <button><span>결제번호 인증내역</span></button>
+                            <button><span>고객 매출분석</span></button>
+                            <button><span>국민은행 별단 지급수수료</span></button>
+                            <button><span>단체고객 현황</span></button>
 
-                            <button data-role="button"><span>동의자료 통계</span></button>
-                            <button data-role="button"><span>세무 / 회계 출금액 통계</span></button>
-                            <button data-role="button"><span>신규 / 소액 세무사 할인</span></button>
-                            <button data-role="button"><span>신용카드 결제금액</span></button>
-                            <button data-role="button"><span>신용카드 지급보류 관리</span></button>
-                            <button data-role="button"><span>알림뱅킹현황</span></button>
-                            <button data-role="button"><span>업체별 야쿠르트 미수 조회</span></button>
-                            <button data-role="button"><span>예수보증금 관리</span></button>
+                            <button><span>동의자료 통계</span></button>
+                            <button><span>세무 / 회계 출금액 통계</span></button>
+                            <button><span>신규 / 소액 세무사 할인</span></button>
+                            <button><span>신용카드 결제금액</span></button>
+                            <button><span>신용카드 지급보류 관리</span></button>
+                            <button><span>알림뱅킹현황</span></button>
+                            <button><span>업체별 야쿠르트 미수 조회</span></button>
+                            <button><span>예수보증금 관리</span></button>
 
-                            <button data-role="button"><span>예수보증금 잔액확인</span></button>
-                            <button data-role="button"><span>온라인 간편가입 업체 조회</span></button>
-                            <button data-role="button"><span>은행별 가상계좌 조회</span></button>
-                            <button data-role="button"><span>전자세금계산서 발행내역</span></button>
-                            <button data-role="button"><span>통신사별 승인금액 조회</span></button>
-                            <button data-role="button"><span>풀무원 카드 수수료 조회</span></button>
-                            <button data-role="button"><span>현금영수증 발행 내역</span></button>
+                            <button><span>예수보증금 잔액확인</span></button>
+                            <button><span>온라인 간편가입 업체 조회</span></button>
+                            <button><span>은행별 가상계좌 조회</span></button>
+                            <button><span>전자세금계산서 발행내역</span></button>
+                            <button><span>통신사별 승인금액 조회</span></button>
+                            <button><span>풀무원 카드 수수료 조회</span></button>
+                            <button><span>현금영수증 발행 내역</span></button>
                             <button class="blanked" disabled="disabled"><span></span></button>
                         </div> 
 
@@ -163,6 +166,17 @@
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
     <script>
+
+            var viewModel_buttonGroup = kendo.observable({
+                isEnabled: true,
+                isVisible: true,
+                onSelect: function (e) {
+                    var buttonGroup = e.sender;
+                    var index = buttonGroup.current().index();
+                    // kendoConsole.log("event :: select (" + index + ")", false);
+                }
+            });
+            kendo.bind($("#viewModel_buttonGroup"), viewModel_buttonGroup);
             var viewModel = kendo.observable({
                 gridSource: [
                     { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
