--- a/pages/SA/SA071001.html
+++ b/pages/SA/SA071001.html
@@ -99,6 +99,12 @@
                                         </select>
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <div class="h-checkbox">
+                                        <input type="checkbox" id="checkbox1-2" name="checkbox" checked="checked" />
+                                        <label for="checkbox1-2"><span>업체 제외</span></label>
+                                    </div>
+                                </div>
                                 
                                 <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                             </div>
