--- a/pages/SA/SA020301.html
+++ b/pages/SA/SA020301.html
@@ -97,7 +97,7 @@
                                     { "field": ""  }
                                     ]' 
                                     data-bind="source: gridSource"
-                                    data-toolbar="#=toolbarTemplate()#" style="height: 760px;">
+                                    data-toolbar="#=toolbarTemplate()#" style="height: 100%;">
                                 </div>
                                 <div class="table-bottom">
                                     <div class="btn-box">
