--- a/pages/BC/BCmain.html
+++ b/pages/BC/BCmain.html
@@ -75,7 +75,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <th scope="row">서비스상태</th>
-                                                        <td colspan="3">
+                                                        <td colspan="3" class="py-6">
                                                             <div class="form-group col">
                                                                 <div class="flexbox justify-content-between w100">
                                                                     <select data-role="dropdownlist" data-value="서비스중" data-option-label="서비스중" class="sm">
@@ -143,14 +143,14 @@
                         </div>
                         <div class="section">
                             <div class="title-box md mt-0">
-                                <h2 class="sub-title">업체상세정보</h2>
+                                <h2 class="sub-title">업체상세정보<span class="badge red">미납</span></h2>
                             </div>
                             <div class="section-content has-tab">
                                 <div data-role="tabstrip" class="tab-control box"
                                 id="viewModel_tab1"
                                 data-bind="visible: isVisible">
                                     <ul class="tab-menu">
-                                        <li>업체특이사항관리</li>
+                                        <li class="has-new">업체특이사항관리</li>
                                         <li class="k-state-active">이용서비스</li>
                                         <li>변경이력</li>
                                         <li>사용료관리</li>
@@ -989,7 +989,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-group">
+                    <div class="section-group mb-30">
                         <div class="section">
                             <div class="table-group">
                                 <div data-role="tabstrip" class="tab-control box"
