--- a/pages/BP/BP0110.html
+++ b/pages/BP/BP0110.html
@@ -10,11 +10,9 @@
 
 </head>
 
-<body class="bp">
+<body>
     <div class="wrap">
-        <!-- Header Include -->
-        <div data-include-path="../layout/header_bp.html"></div>
-
+        
         <div id="container">
             <div id="windowLayer"
                 data-role="window"
