--- a/pages/SA/SA070502.html
+++ b/pages/SA/SA070502.html
@@ -413,7 +413,7 @@
                     dialog.open();
                     console.log('open');
                     if($('.k-dialog .content-group').prop('scrollHeight') + 60 > $(window).height()) {
-                        $('.k-dialog').css({"height":"100%"});
+                        // $('.k-dialog').css({"height":"100%"});
                     }
                 } else {
                     dialog.close();
