--- a/guide/elements_bp/button.html
+++ b/guide/elements_bp/button.html
@@ -60,36 +60,39 @@
         </div>
     </div>
 
-
+<!-- 
     <div class="g-example-wrap">
         <div class="g-example-head">
             <p class="title">Button group</p>
         </div>
-        <div class="g-example-body flex-inline">
-            <ul class="btn-box half">
-                <li class="list"><button data-role="button"><span>Button</span></button></li>
-                <li class="list"><button data-role="button"><span>Button</span></button></li>
-                <li class="list"><button data-role="button"><span>Button</span></button></li>
-                <li class="list"><button data-role="button"><span>Button</span></button></li>
-                <li class="list"><button data-role="button"><span>Button</span></button></li>
-                <li class="list"><button data-role="button"><span>Button</span></button></li>
+        <div class="g-example-body">
+            <ul 
+                data-role="buttongroup"
+                data-bind="visible: isVisible, events: { select: onSelect }"
+                data-index="1"
+                class="btn-box half"
+                id="viewModel_buttonGroup_right">
+                <li class="list"><span>button</span></li>
+                <li class="list"><span>button</span></li>
+                <li class="list"><span>button</span></li>
+                <li class="list"><span>button</span></li>
             </ul>
         </div>
         <div class="g-example-foot"> 
             <pre><code class="html">
 &lt;ul class="btn-box half">
-    &lt;li class="list">&lt;button data-role="button">&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
-    &lt;li class="list">&lt;button data-role="button">&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
-    &lt;li class="list">&lt;button data-role="button">&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
-    &lt;li class="list">&lt;button data-role="button">&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
-    &lt;li class="list">&lt;button data-role="button">&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
-    &lt;li class="list">&lt;button data-role="button">&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
+    &lt;li class="list">&lt;button>&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
+    &lt;li class="list">&lt;button>&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
+    &lt;li class="list">&lt;button>&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
+    &lt;li class="list">&lt;button>&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
+    &lt;li class="list">&lt;button>&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
+    &lt;li class="list">&lt;button>&lt;span>Button&lt;/span>&lt;/button>&lt;/li>
 &lt;/ul>
             </code></pre>
         </div>
     </div>
-    
-    
+     -->
+<!--     
     <div class="g-example-wrap">
         <div class="g-example-head">
             <p class="title">Button group</p>
@@ -97,85 +100,85 @@
         <div class="g-example-body flex-inline">
             <ul class="btn-box square">
                 <li class="list">
-                    <button data-role="button" class="col active">
+                    <button class="col active">
                         <i class="h-ico sector1"></i>
                         <span>IT서비스</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector2"></i>
                         <span>교육</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector3"></i>
                         <span>금융</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector4"></i>
                         <span>대형용역</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector5"></i>
                         <span>배달</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector6"></i>
                         <span>보육</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector7"></i>
                         <span>상조</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector8"></i>
                         <span>장기요양</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector9"></i>
                         <span>전문</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector10"></i>
                         <span>체인도매</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector11"></i>
                         <span>체크기</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector12"></i>
                         <span>할부판매</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector13"></i>
                         <span>협회/단체</span>
                     </button>
                 </li>
                 <li class="list">
-                    <button data-role="button" class="col">
+                    <button class="col">
                         <i class="h-ico sector14"></i>
                         <span>후원</span>
                     </button>
@@ -186,85 +189,85 @@
             <pre><code class="html">
 &lt;ul class="btn-box square">
     &lt;li class="list">
-        &lt;button data-role="button" class="col active">
+        &lt;button class="col active">
             &lt;i class="h-ico sector1">&lt;/i>
             &lt;span>IT서비스&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector2">&lt;/i>
             &lt;span>교육&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector3">&lt;/i>
             &lt;span>금융&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector4">&lt;/i>
             &lt;span>대형용역&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector5">&lt;/i>
             &lt;span>배달&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector6">&lt;/i>
             &lt;span>보육&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector7">&lt;/i>
             &lt;span>상조&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector8">&lt;/i>
             &lt;span>장기요양&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector9">&lt;/i>
             &lt;span>전문&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector10">&lt;/i>
             &lt;span>체인도매&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector11">&lt;/i>
             &lt;span>체크기&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector12">&lt;/i>
             &lt;span>할부판매&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector13">&lt;/i>
             &lt;span>협회/단체&lt;/span>
         &lt;/button>
     &lt;/li>
     &lt;li class="list">
-        &lt;button data-role="button" class="col">
+        &lt;button class="col">
             &lt;i class="h-ico sector14">&lt;/i>
             &lt;span>후원&lt;/span>
         &lt;/button>
@@ -272,7 +275,7 @@
 &lt;/ul>
             </code></pre>
         </div>
-    </div>
+    </div> -->
 
 
 </div>
