--- a/pages/BC/BC010202.html
+++ b/pages/BC/BC010202.html
@@ -410,7 +410,7 @@
                     dialog.open();
                     console.log('open');
                     if($('.k-dialog .content-group').prop('scrollHeight') + 60 > $(window).height()) {
-                        $('.k-dialog').css({"height":"100%"});
+                        // $('.k-dialog').css({"height":"100%"});
                     }
                 } else {
                     dialog.close();
